# sonara

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-STRATEGY.md  LICENSES.md  PRD.md  README.md
docs/: overview.md
docs/architecture/: bus-effect-automation.md  clippy-follow-up-plan.md  module-split-refactor-plan.md  music-system-evolution.md  runtime-and-backend.md
docs/concepts/: authoring-and-bank.md  glossary.md
sonara-app/: Cargo.toml
sonara-app/assets/demo/: core.bank.json  project.json
sonara-app/assets/music_demo/: core.bank.json  cue_trigger.bank.json  project.json  track_groups.bank.json
sonara-app/src/: main.rs
sonara-bevy/: Cargo.toml
sonara-bevy/examples/: minimal_bevy.rs  music_cue_trigger.rs  music_resume.rs  music_track_groups.rs  music_zone.rs  surface_walk.rs  underwater.rs  underwater_music.rs
sonara-bevy/src/: audio.rs  components.rs  error.rs  lib.rs  plugin.rs  prelude.rs  tests.rs
sonara-build/: Cargo.toml
sonara-build/src/: compile.rs  error.rs  lib.rs  media.rs  package.rs  project.rs  tests.rs  validate.rs
sonara-editor/: Cargo.toml
sonara-editor/src/: content.rs  i18n.rs  lib.rs  main.rs  ui.rs
sonara-firewheel/: Cargo.toml
sonara-firewheel/src/: assets.rs  backend.rs  error.rs  events.rs  fx.rs  lib.rs  music.rs  tests.rs  types.rs  workers.rs
sonara-model/: Cargo.toml
sonara-model/src/: asset.rs  bank.rs  bus.rs  effect.rs  event.rs  ids.rs  lib.rs  music.rs  parameter.rs  project.rs  snapshot.rs  transport.rs
sonara-runtime/: Cargo.toml
sonara-runtime/src/: bank.rs  commands.rs  error.rs  events.rs  ids.rs  lib.rs  mix.rs  music.rs  tests.rs  types.rs
