[workspace]
members = [
    "sonara-app",
    "sonara-bevy",
    "sonara-build",
    "sonara-editor",
    "sonara-firewheel",
    "sonara-model",
    "sonara-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
camino = { version = "1.1.9", features = ["serde1"] }
firewheel = { version = "0.10.0", default-features = false, features = ["cpal", "sampler_node", "std", "tracing"] }
firewheel-pool = { version = "0.10.0", default-features = false, features = ["sampler", "std"] }
firewheel-symphonium = { version = "0.10.0", default-features = false, features = ["resample"] }
hound = "3.5.1"
serde = { version = "1.0.219", features = ["derive"] }
smol_str = { version = "0.3.2", features = ["serde"] }
symphonium = "0.7.1"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["serde", "v7"] }
