[package]
name = "sonara-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
sonara-editor = { path = "../sonara-editor" }
sonara-firewheel = { path = "../sonara-firewheel" }
sonara-model = { path = "../sonara-model" }
sonara-runtime = { path = "../sonara-runtime" }
uuid.workspace = true
