[package]
name = "sonara-bevy"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bevy_app = "0.18.1"
bevy_ecs = "0.18.1"
sonara-build = { path = "../sonara-build" }
sonara-firewheel = { path = "../sonara-firewheel" }
sonara-model = { path = "../sonara-model" }
sonara-runtime = { path = "../sonara-runtime" }
thiserror.workspace = true

[dev-dependencies]
bevy = "0.18.1"
camino.workspace = true
uuid.workspace = true
