[package]
name = "sonara-build"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sonara-model = { path = "../sonara-model" }
smol_str.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
camino.workspace = true
